tests/ui/shared/second_phase_unsynced.stderr
error[RX3009]: cannot prove shared write/read is synchronized by a block barrier: read of shared `tile` may observe another lane's write not synchronized by `block.sync()`
 --> $DIR/shared/second_phase_unsynced.rx:8:14
  |
8 |     dst[i] = tile[0]; //~ ERROR RX3009
  |              ^^^^^^^ shared read not synchronized by a block barrier
